--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +22,7 @@
 </ul>
 </nav>
 <button class="button-menu-toggle">Menu</button>
-</div class="container">
+<div class="container">
 
 <h1>Acerca de</h1>
 <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre
@@ -39,6 +39,48 @@ nuestra empresa y los servicios que ofrecemos.</p>
 <script src="codigo.js"> </script>
 <script src="button.js"></script>
   
+</body>
+
+</html>-->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi Primer Website</title>
+  <link rel="stylesheet" href="Style2.css">
+</head>
+
+<body>
+  <div class="container-nav">
+    <nav class="navbar" role="navigation">
+      <a href="index.html" class="brand">Mi página web</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <button class="button-menu-toggle">Menu</button>
+  </div>
+
+  <div class="container">
+    <h1>Acerca de</h1>
+    <p>¡Bienvenido a nuestra página "Acerca de"! Aquí aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
+  </div>
+
+  <div class="container-galeria">
+    <img src="Aioros.jpg" alt="" class="galeria_img">
+    <img src="caballeros-de-oro-caballeros-del-zodiaco-saint-seiya-og.jpg" alt="" class="galeria_img">
+    <img src="caballeros-zodiaco-como-acabo-anime-original-saint-seiya.jpg" alt="" class="galeria_img">
+  </div>
+
+  <script src="codigo.js"></script>
+  <script src="button.js"></script>
 </body>
 
 </html>
