--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
 </ul>
 </nav>
 <button class="button-menu-toggle">Menu</button>
-</div class="container">
+</div>
+<div class="container">
 
 <h1>Contacto</h1>
 <p>¡Contáctanos para cualquier consulta o solicitud de información!</p>
@@ -30,9 +31,9 @@
 <!-- Agrega aquí los campos del formulario -->
 </form>
 
-     </div>
-    </div>
-  </div>
+    
+</div>
+
   <form id="myForm">
     <label for="email">Correo electrónico:</label>
     <input type="email" id="email" name="email" required>
