--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +22,7 @@
 </ul>
 </nav>
 <button class="button-menu-toggle">Menu</button>
-</div class="container">
+<div class="container">
 
     <h1>Bienvenidos a mi primer Website!</h1>
     <section>
@@ -55,6 +55,67 @@
 
   </script>
  <script src="button.js"></script>
+</body>
+
+</html>-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="Style2.css">
+  <title>Mi Primer Website</title>
+</head>
+
+<body>
+  <div class="container-nav">
+    <nav class="navbar" role="navigation">
+      <a href="index.html" class="brand">Mi página web</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <button class="button-menu-toggle">Menu</button>
+  </div>
+
+  <div class="container">
+    <h1>Bienvenidos a mi primer Website!</h1>
+    <section>
+      <button onclick="showAlert()">¡Haz CLICK!</button>
+      <div class="row">
+        <div class="column">
+          <h2>Un subtitulo en h2 </h2>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Sy4dhcELoqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <p>Soy Fabricio, ¡y esta es mi primera página web!</p>
+          <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
+        </div>
+        <div class="column">
+          <h2> Otro sutitulo 2</h2>
+          <p>A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript.
+            Estos lenguajes me ayudarán a crear una base sólida en el desarrollo web front-end.</p>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <form id="myForm">
+    <label for="email">Correo electrónico:</label>
+    <input type="email" id="email" name="email" required>
+    <button type="submit">Enviar</button>
+  </form>
+
+  <footer>
+    <p>Este es el contenido de mi footer.</p>
+  </footer>
+
+  <script src="codigo.js"></script>
+  <script src="button.js"></script>
 </body>
 
 </html>
