--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +22,7 @@
 </ul>
 </nav>
 <button class="button-menu-toggle">Menu</button>
-</div class="container">
+<div class="container">
 
 
     <div class="row">
@@ -42,6 +42,72 @@
   <script src="codigo.js">
 
   </script>
+  <script src="button.js"></script>
+</body>
+
+</html>-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi Primer Website</title>
+  <link rel="stylesheet" href="Style2.css">
+  <!-- Agregar enlaces a fuentes de Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="container-nav">
+      <nav class="navbar" role="navigation">
+        <a href="index.html" class="brand">Mi página web</a>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <button class="button-menu-toggle">Menu</button>
+    </div>
+  </header>
+
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <h1>Nuestros servicios</h1>
+        <p>Descubre aquí los servicios que ofrecemos.</p>
+        <ul>
+          <li>
+            <img src="servicio1.jpg" alt="Servicio 1">
+            <h3>Servicio 1</h3>
+            <p>Descripción del servicio 1.</p>
+          </li>
+          <li>
+            <img src="servicio2.jpg" alt="Servicio 2">
+            <h3>Servicio 2</h3>
+            <p>Descripción del servicio 2.</p>
+          </li>
+          <li>
+            <img src="servicio3.jpg" alt="Servicio 3">
+            <h3>Servicio 3</h3>
+            <p>Descripción del servicio 3.</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2023 Mi página web. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <script src="codigo.js"></script>
   <script src="button.js"></script>
 </body>
 
